# Nexoedge

src/common/: config.cc  config.hh  define.hh
src/proxy/: CMakeLists.txt  proxy.cc
src/proxy/replication/: CMakeLists.txt  all.hh  redis_sentinel_metastore.cc  redis_sentinel_metastore.hh
src/proxy/replication/sentinel/: connection_pool.cc  connection_pool.hh  sentinel_client.cc  sentinel_client.hh
src/tests/: CMakeLists.txt
src/tests/replication/: sentinel_client_test.cc
